examples/test/testpolicy9902.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9902
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key28: value19
      key48: value34
      key38: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value20
          key32: value35
      podSelector:
        matchLabels:
          key39: value4
